# nash-local-server

./: .env.example  README.md  lakers_games_analysis.csv  pyproject.toml
.cursor/rules/: dependencies.mdc  file_organization.mdc  style.mdc
app/: llm_handler.py  mcp_handler.py  prompts.py  server.py  stream_processor.py  streaming.py
test_scripts/: api_credentials.py  message_display.py  test_chat_with_mcp.py  test_http_client.py  test_llm_handler.py  test_mcp_handler.py  test_raw_http_client.py  test_raw_llm_chunks.py
test_scripts/litellm_tools/: test_anthropic_openai_compatible.py  test_anthropic_streaming_tools.py  test_anthropic_tools.py  test_litellm_tools.py  test_model_tool_support.py  test_simple_tool_call.py
tests/: test_streaming.py
tests/fixtures/: anthropic_llm_chunks_only_assistant_01.json  anthropic_llm_chunks_tool_call_01.json  anthropic_llm_chunks_tool_call_02.json
